# Computer-Vision-Week-03

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  conftest.py  pyproject.toml  quick_test.py  requirements-dev.txt  requirements.txt  setup.py  urban_scene_cnn.py
.github/workflows/: tests.yml
configs/: default.yaml
src/: __init__.py  config.py  main.py
src/models/: __init__.py  base.py  cnn.py
src/training/: __init__.py  trainer.py  utils.py
src/utils/: __init__.py  io.py  logger.py  visualization.py
tests/: __init__.py  conftest.py  test_dataset.py  test_models.py  test_training.py
